# wiktionary_rus

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt
source/: grammemes_statistics.xlsx  kaikki.org-dictionary-Russian_2022_01_01.json  kaikki_parsing_to_Class.ipynb
tests/: test_get_number2sign.json  test_get_sign2number.json  test_get_unique_ipa.json  test_ipa_processing.py  test_npipa_processing.py  test_upload_wiki_parsed.py  test_wikiout.json  test_wiktionary.py
wiktionary_rus/: dictionary.py  dictionary_class.py  draft.ipynb  ipa_processing.py  npipa_processing.py  wiki_parsed.pkl  wiktionary.py
